preparing 10.4